<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".MainActivity12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tu"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/large_size" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/winwin"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/large_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pic"
                    app:srcCompat="@drawable/tu_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_editext"
                    android:inputType="textPersonName"
                    android:padding="10dip"
                    android:text="@string/id"
                    android:textColor="#959494"
                    android:textSize="@dimen/normal_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button101"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_yellowbutton"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/normal_size" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>